[package]
name = "cf-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14"
libc = "0.2"
log = "0.4"
simplelog = "0.12"
ctrlc = "3.4"
rusqlite = "0.31"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
filetime = "0.2.25"

[dev-dependencies]
prettytable-rs = "0.10"
